Sponsor logo :hover highlights + alignment corrections

--- a/2011/_css/36em.css
+++ b/2011/_css/36em.css
@@ -124,7 +124,7 @@
 		line-height: 30px;
 	}
 	
-	#sponsors .silver li { width: 50%; height: 3em; }
+	#sponsors .silver li { width: 50%; height: 4em; }
 	
 	.blogpost { margin: 3em 0 4em; }
 	
